--- a/packages.config
+++ b/packages.config
@@ -24,6 +24,7 @@
   <package id="Microsoft.IdentityModel.Tokens" version="7.7.1" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.ClientModel" version="1.5.1" targetFramework="net472" />
+  <package id="System.Configuration.ConfigurationManager" version="9.0.8" targetFramework="net472" />
   <package id="System.Data.Common" version="4.3.0" targetFramework="net472" />
   <package id="System.Data.SqlClient" version="4.9.0" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="8.0.1" targetFramework="net472" />
