--- a/PP1.csproj
+++ b/PP1.csproj
@@ -293,6 +293,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Imagenes\Movimientos\" />
     <Folder Include="Images\" />
   </ItemGroup>
   <ItemGroup>
